[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/TrapSpike.gd" type="Script" id=1]
[ext_resource path="res://Art/Obstacles/trapSpike.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -7, 6, 4, -6, 4 )

[node name="TrapSpike" type="Node2D"]
script = ExtResource( 1 )
move_speed = 300

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 4.117, -2.0619 )
rotation = -4.71593
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite"]
position = Vector2( 9.36961, 3.45196 )
rect = Rect2( -10, -10, 10, 10 )

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_exited" from="Sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
